[gd_scene load_steps=13 format=2]

[ext_resource path="res://Textures/player_spritesheet.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Textures/game_win_heart.png" type="Texture" id=4]
[ext_resource path="res://Textures/seeing_each_other.png" type="Texture" id=5]
[ext_resource path="res://Textures/player_eyes.png" type="Texture" id=6]
[ext_resource path="res://Animations/Blink 0.tres" type="Animation" id=7]
[ext_resource path="res://Fonts/BasicFont48.tres" type="DynamicFont" id=8]
[ext_resource path="res://Animations/Blink 1.tres" type="Animation" id=9]
[ext_resource path="res://Animations/Blink 2.tres" type="Animation" id=10]
[ext_resource path="res://Textures/status_indicators.png" type="Texture" id=11]
[ext_resource path="res://Animations/Status Flicker.tres" type="Animation" id=12]

[sub_resource type="Gradient" id=1]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="Player" type="Sprite" groups=[
"DynamicObjects",
"Obstacles",
"Players",
]]
position = Vector2( 385.421, 156.29 )
texture = ExtResource( 1 )
offset = Vector2( 0, -32 )
hframes = 8
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimPlayerEyes" type="AnimationPlayer" parent="."]
"anims/Blink 0" = ExtResource( 7 )
"anims/Blink 1" = ExtResource( 10 )
"anims/Blink 2" = ExtResource( 9 )

[node name="SeeingEachOther" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -83.8006 )
z_index = 1001
texture = ExtResource( 5 )
offset = Vector2( 0, -64 )

[node name="Eyes" type="Sprite" parent="."]
position = Vector2( 26, -36 )
texture = ExtResource( 6 )
vframes = 2
hframes = 3

[node name="DepthLabel" type="Label" parent="."]
visible = false
margin_left = -17.4585
margin_top = -62.1521
margin_right = 22.5415
margin_bottom = 0.84787
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PosLabel" type="Label" parent="."]
visible = false
margin_left = -17.4585
margin_top = -62.1521
margin_right = 22.5415
margin_bottom = 0.84787
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2

[node name="MovementParticles" type="CPUParticles2D" parent="."]
pause_mode = 2
show_behind_parent = true
emitting = false
amount = 16
local_coords = false
texture = ExtResource( 4 )
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 10.0
scale_amount = 0.02
scale_amount_random = 0.05
color_ramp = SubResource( 1 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="StatusIndicator" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -131 )
scale = Vector2( 0.85, 0.85 )
z_index = 1001
texture = ExtResource( 11 )
hframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="StatusIndicator"]
"anims/Status Flicker" = ExtResource( 12 )
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
